<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.EmbeddingFrag">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="50dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/container_con_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secret_message" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/browse_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_file"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/file_name" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/hide_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_input"
            android:text="@string/hide"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_without_border"
            android:imeOptions="actionNext"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secret_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_input"
            android:gravity="start"
            android:hint="@string/hint_secret_message"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/border_input"
            android:enabled="false"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/browse_file"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_con_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_confirm_password"
                android:background="@drawable/border_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="50dp"
                android:padding="10dp"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--    <com.google.android.material.textfield.TextInputEditText-->
        <!--        android:id="@+id/edt_confirm_password"-->
        <!--        android:layout_width="0dp"-->
        <!--        android:maxLines="1"-->
        <!--        app:passwordToggleEnabled="true"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginTop="20dp"-->
        <!--        android:layout_marginEnd="10dp"-->
        <!--        android:layout_marginRight="10dp"-->
        <!--        android:background="@drawable/border_input"-->
        <!--        android:minHeight="50dp"-->
        <!--        android:padding="10dp"-->
        <!--        android:imeOptions="actionDone"-->
        <!--        android:inputType="textPassword"-->
        <!--        app:layout_constraintEnd_toStartOf="@+id/textView3"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/edt_password" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_con_pass"
            android:layout_width="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeWidth="0dp"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secret_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_input"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="50dp"
                android:padding="10dp"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secret_message"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>